tests/grammar/types/type_alias/type_alias_err_2/stderr.golden
error[E2G22]: TypeError
 --> ${CWD}/main.k:4:1
  |
4 | _name: String = 1
  | ^ expected str, got int(1)
  |